@@ -19,6 +19,7 @@ NEWS
   * Fix mod_fastcgi prefix matching: match the prefix always against url, not the absolute filepath (regardless of check-local)
   * Overwrite Content-Type header in mod_dirlisting instead of inserting (#1614), patch by Henrik Holst
   * Handle EINTR in mod_cgi during write() (#1640)
+  * Allow all http status codes by default; disable body only for 204,205 and 304; generate error pages for 4xx and 5xx (#1639)
 
 - 1.4.19 - 2008-03-10
 
